[package]
name = "matrix-cascade"
description = "Matrix Cascade"
version = "0.1.0"
edition = "2021"

[[example]]
name = "tui-background"
required-features = ["tui"]

[dev-dependencies]
crossterm = "0.22.1"
tui = { version = "0.16", default-features = false, features = ["crossterm"] }

[dependencies]
rand = "0.8.4"
tui = { version = "0.16.0", optional = true }
